Hide from Google

--- a/over-kpn-wifi-hotspots.html
+++ b/over-kpn-wifi-hotspots.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Bied uw klanten extra service met gratis internet van KPN WiFi Hotspots. Zonder gedoe, met meertalige helpdesk en nu met gratis apparatuur en installatie.">
     <meta name="author" content="KPN WiFi HotSpots">
     <meta name="language" content="dutch">
+    <meta name="robots" content="noindex, nofollow">
     <title>KPN WiFi HotSpots voor gratis internet zonder gedoe | KPN WiFi HotSpots</title>
     <link rel="shortcut icon" href="img/kpn_favicon.ico">
     <link rel="stylesheet" href="css/app.css"><!--[if lt IE 9]>
