--- a/risicos-eigen-wifi.html
+++ b/risicos-eigen-wifi.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Neem geen risico door uw eigen WiFi-verbinding open te zetten, maar word een KPN WiFi Hotspot. Snel, betrouwbaar internet volgens de lokale en EU wetgeving.">
     <meta name="author" content="KPN WiFi HotSpots">
     <meta name="language" content="dutch">
+    <meta name="robots" content="noindex, nofollow">
     <title>KPN WiFi HotSpots voor betrouwbaar internet zonder risico’s | KPN WiFi HotSpots</title>
     <link rel="shortcut icon" href="img/kpn_favicon.ico">
     <link rel="stylesheet" href="css/app.css"><!--[if lt IE 9]>
