--- a/sportvereniging-lp.html
+++ b/sportvereniging-lp.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Bied uw klanten extra service met snel, betrouwbaar en gratis draadloos internet met KPN WiFi Hotspots. Sluit u ook aan bij meer dan 4000 locaties.">
     <meta name="author" content="KPN WiFi HotSpots">
     <meta name="language" content="dutch">
+    <meta name="robots" content="noindex, nofollow">
     <title>Sportverenigingen | KPN WiFi HotSpots</title>
     <link rel="shortcut icon" href="img/kpn_favicon.ico">
     <link rel="stylesheet" href="css/app.css"><!--[if lt IE 9]>
