--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Bied uw klanten extra service met snel, betrouwbaar en gratis draadloos internet met KPN WiFi Hotspots. Sluit u ook aan bij meer dan 4000 locaties.">
     <meta name="author" content="KPN WiFi HotSpots">
     <meta name="language" content="dutch">
+    <meta name="robots" content="noindex, nofollow">
     <title>KPN WiFi HotSpots voor snel, betrouwbaar internet | KPN WiFi HotSpots</title>
     <link rel="shortcut icon" href="img/kpn_favicon.ico">
     <link rel="stylesheet" href="css/app.css"><!--[if lt IE 9]>
@@ -362,7 +363,7 @@
             <div class="aanbod">
               <div class="aanbod__content">
                 <div class="aanbod__logo imgc"><img src="img/kpn-logo-280x118px.png"/></div>
-                <h3 class="aanbod__header">Tijdelijk aanbod<span class="colon">:</span><img src="img/kpn-egg-ff9900-300x273px.png" width="100%"/></h3>
+                <h3 class="aanbod__header">Tijdelijk aanbod<span class="colon">:</span><img src="../img/kpn-egg-ff9900-300x273px.png" width="100%"/></h3>
                 <ul class="aanbod__list">
                   <li class="aanbod__item aanbod__item--1st aanbod__item--xs">Gratis apparatuur en installatie <br class="h-ls"/>(ter waarde van &euro;&nbsp;600,-)</li>
                   <li class="aanbod__item aanbod__item--2nd aanbod__item--xs">Eerste halfjaar &euro; 25,- per maand <br class="h-ls"/>(daarna &euro;&nbsp;50,- p.m.)</li>
