Image path edit

--- a/sportvereniging-lp.html
+++ b/sportvereniging-lp.html
@@ -358,7 +358,7 @@
             <div class="aanbod">
               <div class="aanbod__content">
                 <div class="aanbod__logo imgc"><img src="img/kpn-logo-280x118px.png"/></div>
-                <h3 class="aanbod__header">Tijdelijk aanbod<span class="colon">:</span><img src="../img/kpn-egg-ff9900-300x273px.png" width="100%"/></h3>
+                <h3 class="aanbod__header">Tijdelijk aanbod<span class="colon">:</span><img src="img/kpn-egg-ff9900-300x273px.png" width="100%"/></h3>
                 <ul class="aanbod__list">
                   <li class="aanbod__item aanbod__item--1st aanbod__item--xs">Gratis apparatuur en installatie <br class="h-ls"/>(ter waarde van &euro;&nbsp;600,-)</li>
                   <li class="aanbod__item aanbod__item--2nd aanbod__item--xs">Eerste halfjaar &euro; 25,- per maand <br class="h-ls"/>(daarna &euro;&nbsp;50,- p.m.)</li>
